@@ -8,18 +8,69 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.google.gradle:osdetector-gradle-plugin:1.7.0'
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.7.3'
         // https://github.com/ben-manes/gradle-versions-plugin
         // task: dependencyUpdates
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.44.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.45.0'
+        classpath 'org.openjfx:javafx-plugin:0.1.0'
     }
+}
+
+plugins {
+    id 'org.beryx.runtime' version '1.12.7'
 }
 
 apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'com.google.osdetector'
-//apply plugin: 'maven' // - to be removed for Gradle 7.*
 apply plugin: 'maven-publish'
+
+// TFE, 20230914: build support for executables
+// https://foojay.io/today/building-javafx-with-gradle/
+apply plugin: 'org.openjfx.javafxplugin'
+javafx {
+    version = '19.0.2'
+    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.base', 'javafx.fxml', 'javafx.web', 'javafx.swing', 'javafx.media' ]
+    platform = 'win'
+    sdk = 'D:/Thomas/Development/Java/javafx-sdk-19.0.2.1' // on mac
+
+}
+
+application {
+    mainClass = "tf.gpx.edit.main.Launcher"
+    applicationName = 'GPXEditor'
+}
+
+// https://badass-runtime-plugin.beryx.org/releases/latest/
+// https://github.com/beryx-gist/badass-runtime-example-javafx
+runtime {
+    // Some default options
+    options = ['--verbose', '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    // Pack it!
+    launcher {
+        noConsole = true
+    }
+    jpackage {
+        // Could be taken from command line, here it is defined statically
+        // project.findProperty('installerOs')
+        //    (example: -PinstallerOs=mac)
+        targetPlatformName = 'win'
+        // The app name
+        imageName = 'GPXEditor'
+        // Add jpackage-specific options
+        installerOptions = [
+            '--name', 'GPXEditor',
+            '--description', 'GPXEditor - JavaFX GPX file editor'
+        ]
+        imageOptions += ['--icon', 'src/main/resources/GPXEditorManager.ico'] 
+        installerOptions += [
+            // '--win-per-user-install', // Install only for current user
+            // '--win-console', // Shows what Java outputs to the console
+            '--win-dir-chooser',
+            '--win-menu', '--win-shortcut'
+        ]
+    }
+}
 
 // see https://github.com/kelemen/netbeans-gradle-project/issues/179
 apply plugin: 'idea'
@@ -48,7 +99,7 @@ if (!hasProperty('mainClass')) {
 mainClassName = 'tf.gpx.edit.main.GPXEditorManager'
 def appName='GPXEditor'
 group='tf.GPXEditor'
-version='5.7'
+version='5.8'
 description = 'GPXEditor - JavaFX GPX file editor'
 
 repositories {
@@ -73,8 +124,9 @@ dependencies {
     // JavaFX11 explicit dependencies
 //    def javafx_version='11.0.2'
 //    def javafx_version='14'
-    def javafx_version='15.0.1'
-//    def javafx_version='17.0.2'
+//    def javafx_version='15.0.1'
+//    def javafx_version='17.0.1'
+    def javafx_version='19.0.2'
     implementation "org.openjfx:javafx-base:$javafx_version:$platform"
     implementation "org.openjfx:javafx-graphics:$javafx_version:$platform"
     implementation "org.openjfx:javafx-controls:$javafx_version:$platform"
@@ -84,7 +136,7 @@ dependencies {
     implementation "org.openjfx:javafx-media:$javafx_version:$platform"
     
     // TFE, 20191209: our own helper library
-    implementation 'tf.JavaHelper:JavaHelper:1.15'
+    implementation 'tf.JavaHelper:JavaHelper:1.16'
 
     implementation 'commons-cli:commons-cli:1.5.0'
     implementation 'commons-io:commons-io:2.11.0'
@@ -92,7 +144,7 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'
     implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
-    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.9.0'
+    implementation group: 'org.apache.commons', name: 'commons-csv', version: '1.10.0'
     implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.22'
     implementation 'me.himanshusoni.gpxparser:gpx-parser:1.14'
     implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.1.2'
@@ -110,10 +162,10 @@ dependencies {
 //    compile 'de.jensd:fontawesomefx-octicons:4.3.0-9.1.2'
 //    compile 'de.jensd:fontawesomefx-weathericons:2.0.10-9.1.2'
     
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.14.0'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0'
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.14.0'
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.14.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.14.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.14.2'
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.14.2'
 
     implementation group: 'de.grundid.opendatalab', name: 'geojson-jackson', version: '1.14'
     implementation group: 'org.jfxtras', name: 'jfxtras-controls', version: '15-r2'
@@ -134,6 +186,7 @@ dependencies {
     implementation group: 'org.magicwerk.brownies', name: 'brownies-collections', version: '0.9.19'
     
     // sun data
+    // TODO: upgrade to 0.1.7 and fix breaking changes
     implementation group: 'net.e175.klaus', name: 'solarpositioning', version: '0.0.9'
     
     // timezone provider
@@ -142,14 +195,12 @@ dependencies {
     
     // TFE, 20220320: change to charts based on canvas for performance
     // latest version compatible with javafx 15 is for 11
-    implementation 'eu.hansolo.fx:charts:17.1.25'
-    // TODO: error: error reading C:\Users\thomas\.gradle\caches\modules-2\files-2.1\eu.hansolo.fx\heatmap\17.0.11\69d60f2307f1ddb380ec3f847c255cac2c77dbba\heatmap-17.0.11.jar; java.net.URISyntaxException: Illegal character in path at index 129: file:/C:/Users/thomas/.gradle/caches/modules-2/files-2.1/eu.hansolo.fx/heatmap/17.0.11/69d60f2307f1ddb380ec3f847c255cac2c77dbba/${project.name}-${project.version}.jar
-    // implementation 'eu.hansolo.fx:heatmap:17.0.5'
+    implementation 'eu.hansolo.fx:charts:17.1.27'
     
-    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
-    // TFE, 20220205: not working, "No test cases executed" after all the code changes...
-    // new versions of the code are in "junit5.zip" for some later time when I have stamina to check this fuck-up
-//    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.2'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'
+    // TFE, 20221231: build a test suite for all non-UI tests
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-suite-engine', version: '1.9.2'
     // TFE, 20210216: capture System.err() easily
     testImplementation group: 'com.github.stefanbirkner', name: 'system-lambda', version: '1.2.1'
 }
@@ -200,6 +251,9 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 // TFE, 20200803: workaround for "WARNING: Illegal reflective access by com.rits.cloning.Cloner"
                 // https://github.com/x-stream/xstream/issues/101#issuecomment-667734663
                 '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+                // TFE, 20230616: needed for cloning metadata
+                '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+                '--add-opens', 'java.base/java.time.zone=ALL-UNNAMED',
                 '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED',
     ]
     
@@ -215,14 +269,9 @@ run {
 //        jvmArgs = jvmArgs.plus('-agentpath:"C:/PROGRA~1/visualvm_212/visualvm/lib/deployed/jdk16/windows-amd64/profilerinterface.dll"="C:/PROGRA~1/visualvm_212/visualvm/lib",5140')
         enableAssertions = true
     }
-    args = ["-mapCenter", "46.66068859124702 11.159234046936037"]
+    args = ["-mapCenter", "46.660578140310854 11.15942716598511"]
 //    args = ["-mergeFiles", "P:/Pictures/Raw/GPX/*.gpx"]
 }
-
-// TFE, 20211102: not working like below
-//task(runSingle) {
-//    args = ["C:\\WUTemp\\feuster.com\\Pictures*C:\\WUTemp\\Temp"]
-//}
 
 test {
 //    exclude '**/*'
@@ -236,6 +285,7 @@ test {
 
     // https://stackoverflow.com/a/35467005
     testLogging.showStandardStreams true;   
+    useJUnitPlatform()
 }
 
 // extend Netbeans Gradle "Debug" task
@@ -276,7 +326,6 @@ sourceSets {
             exclude { 
                 FileTreeElement elem -> ((elem.name.contains('.js') || elem.name.contains('.css')) && !elem.name.contains('.min.')) 
             }
-            exclude ( '/**/firebug-lite.min.js' )
         } 
     }  
 }
